Fixing logout button on mobile.

--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -708,7 +708,6 @@ table {
 .small-menu .links li input {
   margin: auto;
   border: none;
-  background: white;
   font-size: 1.3rem;
   color: black;
   font-weight: 700;
